# AI4SDLC

./: .gitignore  CLAUDE.md  LICENSE  README.md  development-plan.md  pyproject.toml
.claude/skills/github-pr-integration/: SKILL.md
.claude/skills/langgraph-agent/: SKILL.md
.claude/skills/observability/: SKILL.md
.claude/skills/prompt-design/: SKILL.md
.claude/skills/sast-adapter/: SKILL.md
scanners/: bandit_adapter.py  models.py  trivy_adapter.py
tests/: test_bandit_adapter.py  test_models.py  test_trivy_adapter.py
tests/fixtures/: sample_vulnerable.py
