[project]
name = "ai4sdlc-pr-review-agent"
version = "0.1.0"
description = "Agentic AI workflow that reviews pull requests and proposes remediations for security findings."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Burak Çelik" }]
dependencies = [
    "langgraph",
    "anthropic",
    "PyGithub",
    "pydantic",
    "structlog",
    "opentelemetry-api",
    "opentelemetry-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "scanners"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require external tools (Bandit, Trivy, Semgrep) installed",
]
